force-app/main/default/objects/SystemAlert__c/SystemAlert__c.object-meta.xml
<CustomObject>
    <label>System Alert</label>
    <nameField>
        <label>System Alert Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>System Alerts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>