force-app/main/default/objects/SystemAlert__c/fields/AlertDetails__c.field-meta.xml
<CustomField>
    <fullName>AlertDetails__c</fullName>
    <label>Alert Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>