force-app/main/default/objects/SystemAlert__c/fields/GroupId__c.field-meta.xml
<CustomField>
    <fullName>GroupId__c</fullName>
    <label>Group Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>