force-app/main/default/objects/SystemAlert__c/fields/IEESId__c.field-meta.xml
<CustomField>
    <fullName>IEESId__c</fullName>
    <label>IEES Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>