force-app/main/default/objects/SystemAlert__c/fields/ParentId__c.field-meta.xml
<CustomField>
    <fullName>ParentId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Id</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>System Alerts</relationshipLabel>
    <relationshipName>System_Alerts</relationshipName>
    <type>Lookup</type>
</CustomField>